# LearnAgenticAI

langchain_updated/: pyproject.toml  requirements.txt
langchain_updated/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-Middleware.ipynb
